add js and  Footer section

--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
         </div>
       </section>
       <hr class="w-[80%] mx-auto mt-10" />
-      <div class="flex justify-between m-5 text-[#8b94a2]">
-        <p class="ml-40">&copy; 2025 SwiftCart, Inc. All rights reserved.</p>
-        <div class="img-container mr-56 text-xl flex gap-3">
+      <div class="md:flex  justify-between m-5 text-[#8b94a2]">
+        <p class="md:ml-40">&copy; 2025 SwiftCart, Inc. All rights reserved.</p>
+        <div class="img-container mr-56 text-xl flex gap-3 mt-4">
           <i class="fa-brands fa-facebook-f"></i>
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-instagram"></i>
