--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <ul
               tabindex="-1"
-              class="menu menu-sm dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow"
+              class="menu menu-sm dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow text-white"
             >
               <li><a href="#">Home</a></li>
               <li><a href="#">Products</a></li>
